--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -65,7 +65,12 @@
 body {
   min-height: 100vh;
   color: #fff;
-  background: var(--color-background);
+  background: #031425;
+  /* background-image: url('../assets/background-img.png'); */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
+  /* background-blend-mode: overlay; */
+  /* mix-blend-mode: normal; */
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: Neucha, Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
