--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -65,6 +65,7 @@
 body {
   min-height: 100vh;
   color: #fff;
+  background-color: #031425;
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: Neucha, Rubik, Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -75,7 +76,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+/* 
 .background {
   min-height: 100vh;
   position: relative;
@@ -86,4 +87,4 @@ body {
   background-attachment: fixed;
   background-position: top;
   background-size: 30% 30%;
-}
+} */
