--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -76,15 +76,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/* 
+
 .background {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   position: relative;
-  background: #031425;
-  background-image: url('../assets/smoke.png');
-  background-repeat: repeat-x;
-  background-size: contain;
-  background-attachment: fixed;
-  background-position: top;
-  background-size: 30% 30%;
-} */
+  /* background: #031425; */
+  background: #fff;
+  background-image: url('../assets/background.svg');
+  /* background-repeat: repeat-x; */
+  background-size: cover;
+  /* background-attachment: fixed; */
+  /* background-position: top; */
+  /* background-size: 100% 100%; */
+}
